# nockmark

./: .dockerignore  .gitignore  Dockerfile  M3-KICKOFF.md  README.md  g  railway.json
bench-results/: aarch64-16c-t1.json  aarch64-16c-t16.json  apple-m1-8gb-t1.json  apple-m1-8gb-t4.json  graviton-32c-t1.json  graviton-32c-t32.json  graviton-64c-t1.json  graviton-64c-t64.json  intel-c7i-t1.json  intel-c7i-t16.json  intel-c7i-t8.json  x86_64-16c-t1.json  x86_64-16c-t16.json
bench-results/gpu/: rtx4090-goldenminer-v0.4.3.md
bench-results/gpu/2026-07-18-runpod-sweep/: README.md
bench-results/gpu/2026-07-18-runpod-sweep/3090/: gpu-id.txt
bench-results/gpu/2026-07-18-runpod-sweep/4090/: gpu-id.txt
bench-results/gpu/2026-07-18-runpod-sweep/5090/: gpu-id.txt
bench-results/gpu/2026-07-18-runpod-sweep/a100/: gpu-id.txt
deploy/assets/: registry.jam
docs/announce/: 2026-07-m3-announcement.md
docs/superpowers/plans/: 2026-07-15-m2-registry.md  2026-07-16-m3-trustless-submissions.md
docs/superpowers/specs/: 2026-07-15-gpu-spike-pending.md  2026-07-15-m0-spike-findings.md  2026-07-15-m1-bench-results.md  2026-07-15-m2-deploy-runbook.md  2026-07-15-nockmark-design.md
docs/writeups/: 2026-07-15-first-public-nockchain-proving-benchmarks.md
hoon/: registry.hoon
registry/: Cargo.toml
registry/.cargo/: config.toml
registry/src/: binding.rs  economics.rs  http.rs  kernel.rs  lib.rs  main.rs  ratelimit.rs  verifier.rs
registry/static/: index.html
registry/tests/: binding.rs  e2e.rs  http.rs  kernel.rs  verifier.rs
registry/tests/fixtures/: proof-good.jam
scripts/: build-registry-jam.sh
spike/: Cargo.toml  README.md
spike/src/: main.rs
tock/: .gitignore  Cargo.toml  README.md  gpu-spike.sh  setup-bench.sh
tock/src/: client.rs  hardware.rs  lib.rs  main.rs
ubuntu@174.129.63.224ock/: setup-bench.sh
ubuntu@174.129.63.224ock/src/: miner.rs  nonce.rs
