[package]
name = "nockmark-registry"
version = "0.1.0"
edition = "2021"

# M2 Task 3: RegistryKernel wrapper around tock/assets/registry.jam (Task 2's
# kernel). Standalone crate (not part of a workspace), sibling of tock/.

[dependencies]
tock = { path = "../tock" }
nockapp = { path = "../../../nockchain/crates/nockapp" }
nockvm = { path = "../../../nockchain/crates/nockvm/rust/nockvm" }
zkvm-jetpack = { path = "../../../nockchain/crates/zkvm-jetpack" }
noun-serde = { path = "../../../nockchain/crates/noun-serde" }
roswell = { path = "../../../nockchain/crates/roswell" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.7"
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
