[package]
name = "nockmark-spike"
version = "0.1.0"
edition = "2021"

# M0 spike: standalone prove/verify against the nockchain STARK prover.
# Depends on the nockchain checkout living at ../../../nockchain (sibling of
# the nockmark repo). Throwaway quality: no workspace, no lints.

[dependencies]
nockapp = { path = "../../../nockchain/crates/nockapp" }
nockvm = { path = "../../../nockchain/crates/nockvm/rust/nockvm" }
nockvm_macros = { path = "../../../nockchain/crates/nockvm/rust/nockvm_macros" }
zkvm-jetpack = { path = "../../../nockchain/crates/zkvm-jetpack" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
opt-level = 3
