[package]
name = "tock"
version = "0.1.0"
edition = "2021"

# Nockmark bench harness (M1). Grew out of the M0 spike; depends on the
# nockchain checkout at ../../../nockchain (sibling of the nockmark repo).

[dependencies]
nockapp = { path = "../../../nockchain/crates/nockapp" }
nockvm = { path = "../../../nockchain/crates/nockvm/rust/nockvm" }
nockvm_macros = { path = "../../../nockchain/crates/nockvm/rust/nockvm_macros" }
zkvm-jetpack = { path = "../../../nockchain/crates/zkvm-jetpack" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[profile.release]
opt-level = 3
